<?xml version="1.0"?>
<!-- <package> -->
<package format="2">
  <name>coverage_planner</name>
  <version>0.0.0</version>
  <description>The package for aerial coverage path planning.</description>
  <maintainer email="t_ueno@eis.hokudai.ac.jp">Takaki Ueno</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/uenota/coverage_planner</url>
  <url type="bugtracker">https://github.com/uenota/coverage_planner/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>cgal</build_depend>
  <build_depend>cgal-qt5-dev</build_depend>
  <build_depend>doxygen</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>python-matplotlib</exec_depend>
  <export>
  </export>
</package>
